--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,8 @@ a {
 }
 .site-nav,
 .header-contacts {
-  display: flex;
-
+  display: inline-flex;
+  align-items: center;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -98,11 +98,28 @@ a {
 .header-contacts {
   margin-left: auto;
 }
+
+.link.envelope {
+  display: inline-flex;
+  align-items: center;
+}
+.link.envelope:hover {
+  fill: var(--accent-color);
+}
+.link.envelope::before {
+  content: '';
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  background-image: url(../images/envelope.svg);
+  background-size: contain;
+  background-position: center;
+}
+
 .header-contacts .item + .item {
   margin-left: 50px;
 }
 .header-contacts .link {
-  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -121,11 +138,24 @@ a {
 }
 /* hero */
 .hero {
+  height: 600px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--bg-navyblue);
   letter-spacing: 0.06em;
   text-align: center;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/imgbghero.jpg);
+  background-color: var(--bg-navyblue);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .hero .title {
   margin-bottom: 40px;
@@ -162,6 +192,30 @@ a {
 
 .advantage .item {
   width: 270px;
+}
+.advantage .item::before {
+  display: block;
+  content: '';
+
+  height: 120px;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-color: var(--bg-secondary);
+  background-size: 70px 70px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.antenna::before {
+  background-image: url(../images/antenna.svg);
+}
+.clock::before {
+  background-image: url(../images/clock.svg);
+}
+.diagram::before {
+  background-image: url(../images/diagram.svg);
+}
+.astronaut::before {
+  background-image: url(../images/astronaut.svg);
 }
 /* titles */
 .title {
@@ -222,6 +276,10 @@ a {
 }
 .team-member .item {
   width: 270px;
+  background-color: var(--bg-white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-name {
   margin-bottom: 10px;
