--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,7 @@ h6 {
   list-style: none;
 }
 .notitle {
-  color: #ffffff;
-  font-size: 0%;
+  visibility: hidden;
 }
 /* ссылки */
 a {
@@ -99,23 +98,16 @@ a {
   margin-left: auto;
 }
 
-.link.envelope {
+.header-contacts .item {
   display: inline-flex;
-  align-items: center;
 }
-.link.envelope:hover {
-  fill: var(--accent-color);
-}
-.link.envelope::before {
-  content: '';
-  width: 16px;
-  height: 12px;
+.header-icon {
   margin-right: 10px;
-  background-image: url(../images/envelope.svg);
-  background-size: contain;
-  background-position: center;
+  fill: currentColor;
 }
-
+.header-contacts .item:hover {
+  color: var(--accent-color);
+}
 .header-contacts .item + .item {
   margin-left: 50px;
 }
@@ -134,6 +126,7 @@ a {
 }
 .link:hover,
 .link:focus {
+  fill: var(--accent-color);
   color: var(--accent-color);
 }
 /* hero */
@@ -193,30 +186,17 @@ a {
 .advantage .item {
   width: 270px;
 }
-.advantage .item::before {
-  display: block;
-  content: '';
 
+.icon {
+  display: flex;
   height: 120px;
   margin-bottom: 30px;
   border-radius: 4px;
   background-color: var(--bg-secondary);
-  background-size: 70px 70px;
-  background-repeat: no-repeat;
-  background-position: center;
+  justify-content: center;
+  align-items: center;
 }
-.antenna::before {
-  background-image: url(../images/antenna.svg);
-}
-.clock::before {
-  background-image: url(../images/clock.svg);
-}
-.diagram::before {
-  background-image: url(../images/diagram.svg);
-}
-.astronaut::before {
-  background-image: url(../images/astronaut.svg);
-}
+
 /* titles */
 .title {
   font-weight: 700;
@@ -275,6 +255,7 @@ a {
   justify-content: space-between;
 }
 .team-member .item {
+  display: block;
   width: 270px;
   background-color: var(--bg-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -290,18 +271,73 @@ a {
 }
 .team-function {
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 16px;
   color: var(--title-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
+.social {
+  display: flex;
+  height: 90px;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+}
+.icon-social {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  fill: #afb1b8;
+}
+.icon-social:hover {
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  fill: var(--text-white-color);
+}
+.instagram,
+.twitter,
+.facebook {
+  margin-right: 10px;
+}
+/* Clients */
+.client {
+  display: flex;
+  justify-content: space-between;
+}
+.clients .title {
+  margin-bottom: 50px;
+  text-align: center;
+}
+.client-icon {
+  display: flex;
+  width: 170px;
+  height: 92px;
+  fill: #afb1b8;
+  justify-content: center;
+  align-items: center;
+
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+.client-icon:hover {
+  fill: #2196f3;
+  border: 1px solid #2196f3;
+}
 /* Footer */
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--bg-navyblue);
+}
+.footer .container {
+  display: flex;
+}
+.footer-address {
+  margin-right: 70px;
 }
 .footer .logo {
   font-weight: 700;
@@ -331,6 +367,28 @@ a {
 .footer .link:hover,
 .footer .link:focus {
   color: var(--accent-color);
+}
+.footer-social > .title {
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--text-white-color);
+}
+.footer-social {
+  margin-top: 12px;
+}
+.footer-scl {
+  display: flex;
+}
+.footer-scl .icon-social {
+  fill: var(--text-white-color);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.footer-scl .icon-social:hover {
+  background-color: var(--accent-color);
+  border-radius: 50%;
 }
 /* Portfolio */
 
@@ -376,13 +434,11 @@ a {
   border-bottom-style: solid;
   border-bottom-color: #eee;
 }
-
-/* .content .item:not(:nth-child(3n)) {
-  margin-right: 30px;
+.content .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.content .item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-} */
+
 .pic {
   margin-top: 0;
   margin-bottom: 20px;
