--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,8 @@ a {
   align-items: center;
   fill: #afb1b8;
 }
-.icon-social:hover {
+.icon-social:hover,
+.icon-social:focus {
   background-color: var(--accent-color);
   border-radius: 50%;
   fill: var(--text-white-color);
@@ -386,7 +387,8 @@ a {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
 }
-.footer-scl .icon-social:hover {
+.footer-scl .icon-social:hover,
+.footer-scl .icon-social:focus {
   background-color: var(--accent-color);
   border-radius: 50%;
 }
@@ -406,17 +408,22 @@ a {
   margin-right: 0;
 }
 .btn {
+  padding: 6px 22px;
   background-color: var(--bg-secondary);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
   font-family: Roboto, sans-serif;
+  border: 0;
+  border-radius: 4px;
 }
 .btn:hover,
 .btn:focus {
   color: var(--text-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* Content */
 .content {
@@ -434,7 +441,8 @@ a {
   border-bottom-style: solid;
   border-bottom-color: #eee;
 }
-.content .item:hover {
+.content .item:hover,
+.content .item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
