--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,16 @@ h6 {
 a {
   color: var(--title-text-color);
   text-decoration: none;
-  /* header */
 }
-/* .header {
-  
-} */
+/* P */
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/* img */
+img {
+  display: block;
+}
 /* Лого */
 .logo {
   color: var(--primery-text-color);
@@ -74,6 +79,37 @@ a {
   padding-left: 15px;
   padding-right: 15px;
 }
+/* buttons */
+.button {
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 10px 32px;
+  background-color: var(--accent-color);
+  color: var(--text-white-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  cursor: pointer;
+}
+/* titles */
+.title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+}
+/* texts */
+.text {
+  font-weight: 400;
+}
+/* header */
+.header {
+  border-bottom: 1px solid #ececec;
+}
+.header .container {
+  display: flex;
+}
 /* nav */
 .nav {
   display: flex;
@@ -87,7 +123,7 @@ a {
 }
 .site-nav,
 .header-contacts {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   font-weight: 500;
   font-size: 14px;
@@ -159,17 +195,8 @@ a {
 
   text-transform: uppercase;
 }
-.button {
-  display: inline-block;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  padding: 10px 32px;
-  background-color: var(--accent-color);
-  color: var(--text-white-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  text-align: center;
+.hero .button {
+  letter-spacing: 0.06em;
 }
 .hero .button:hover,
 .hero .button:focus {
@@ -180,11 +207,14 @@ a {
 /* conteiner advantage */
 .advantage .list {
   display: flex;
-  justify-content: space-between;
 }
 
 .advantage .item {
   width: 270px;
+  margin-right: 30px;
+}
+.advantage .item:last-child {
+  margin-right: 0;
 }
 
 .icon {
@@ -197,16 +227,6 @@ a {
   align-items: center;
 }
 
-/* titles */
-.title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-}
-/* texts */
-.text {
-  font-weight: 400;
-}
 .advantage .title {
   margin-bottom: 10px;
   font-size: 14px;
@@ -232,18 +252,17 @@ a {
 }
 .work-box {
   display: flex;
-  justify-content: space-between;
 }
 .work-box .item {
   width: 370px;
+  margin-right: 30px;
+}
+.work-box .item:last-child {
+  margin-right: 0;
 }
 /* Team */
 .team {
   background-color: var(--bg-secondary);
-}
-.photo {
-  margin-top: 0;
-  margin-bottom: 30px;
 }
 .team .title {
   margin-bottom: 50px;
@@ -251,16 +270,22 @@ a {
 }
 .team-member {
   display: flex;
-
-  justify-content: space-between;
 }
 .team-member .item {
   display: block;
   width: 270px;
+  margin-right: 30px;
   background-color: var(--bg-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+.team-member .item:last-child {
+  margin-right: 0;
+}
+.team-badge {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .team-name {
   margin-bottom: 10px;
@@ -270,7 +295,6 @@ a {
   text-align: center;
 }
 .team-function {
-  margin-top: 0;
   margin-bottom: 16px;
   color: var(--title-text-color);
   font-weight: 400;
@@ -280,8 +304,6 @@ a {
 }
 .social {
   display: flex;
-  height: 90px;
-  margin-bottom: 30px;
   justify-content: center;
   align-items: center;
 }
@@ -307,7 +329,6 @@ a {
 /* Clients */
 .client {
   display: flex;
-  justify-content: space-between;
 }
 .clients .title {
   margin-bottom: 50px;
@@ -317,12 +338,16 @@ a {
   display: flex;
   width: 170px;
   height: 92px;
+  margin-right: 30px;
   fill: #afb1b8;
   justify-content: center;
   align-items: center;
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
+}
+.client-icon:last-child {
+  margin-right: 0;
 }
 .client-icon:hover {
   fill: #2196f3;
@@ -352,7 +377,10 @@ a {
 .footer .address {
   margin-top: 20px;
 }
-.footer .item {
+.ftr-list {
+  margin-top: 9px;
+}
+.footer .item + .item {
   margin-top: 9px;
 }
 .footer .address,
