--- a/css/style.css
+++ b/css/style.css
@@ -465,25 +465,17 @@ img {
   margin-top: 30px;
   margin-left: 30px;
   flex-basis: calc(100% / 3 - 30px);
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #eee;
 }
 .content .item:hover,
 .content .item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
-.pic {
-  margin-top: 0;
-  margin-bottom: 20px;
-}
-.content .title,
-.content .text {
-  width: 322px;
-  margin-right: auto;
-  margin-left: auto;
+.content-name {
+  padding: 20px 24px;
+  border-right: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  border-left: 1px solid #eee;
 }
 .content .title {
   margin-bottom: 4px;
@@ -493,8 +485,6 @@ img {
   letter-spacing: 0.06em;
 }
 .content .text {
-  margin-top: 0;
-  margin-bottom: 20px;
   font-size: 16px;
   line-height: 1.87;
 }
